syntax = "proto3";

package sqlanalyzer;

option go_package = "github.com/tktkc72/sqlanalyzer";
option java_package = "dev.tktkc72.sqlanalyzer";
option java_outer_classname = "ZetasqlExtractTable";


service ExtractTableNames {
  rpc Do(ExtractTableNamesRequest) returns (ExtractTableNamesResponse) {}
}
message ExtractTableNamesRequest {
  string statement = 1;
}
message ExtractTableNamesResponse {
  repeated string tableNames = 1;
}